# kshield

./: .dockerignore  .env  .env.example  .gitignore  AUDIT_FLOWS.md  AUDIT_REPORT.md  Dockerfile  Dockerfile.gpu  KAYDAN_SHIELD_Manuel_Utilisateur.docx  README.md  db.sqlite3  docker-compose.edge-dev.yml  docker-compose.ha.yml  docker-compose.keycloak.yml  docker-compose.yml  docker_compose.yml  manage.py  pytest.ini  requirements.txt  ~$YDAN_SHIELD_Manuel_Utilisateur.docx
access_control/: admin.py  models.py  routing.py  serializers.py  services.py  tasks.py  urls.py  views.py
accounts/: admin.py  hmac_auth.py  models.py  permissions.py  rbac.py  scoping.py  serializers.py  urls.py  views.py
administration/: apps.py  crud_views.py  forms.py  urls.py  views.py
agent/: config.example.toml  install-edge.ps1  install-edge.sh  pyproject.toml
agent-go/: Dockerfile  Makefile  go.mod  go.sum  main.go
agent/kshield_agent/: bootstrap.py  cli.py  client.py  config.py  discovery.py  offline_queue.py  readers.py  signing.py
ai_assistant/: admin.py  analysis_tools.py  apps.py  models.py  serializers.py  services.py  tools.py  tools_v2.py  urls.py  views.py
antifraud/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
attendance/: admin.py  ble_stillness.py  models.py  serializers.py  services_face.py  tasks.py  urls.py  views.py
audit/: admin.py  middleware.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
core/: admin.py  apps.py  fields.py  metrics.py  middleware.py  mixins.py  models.py  serializers.py  services.py  (+7 more)
(+519 files in other folders)
